test: align Stock and Order service tests with DTO/Record refactor
- Update test inputs to use Create/Update Request records

- Refactor assertions to use record accessors

- Sync Mockito mocks with service logic

- Use Lombok @Builder for test data setup